<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viemodel"
            type="com.example.jumpingmind_assignment.feature.registration.ui.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/login_bk_color"
        android:focusableInTouchMode="true"
        android:gravity="center"
        tools:context="com.appsnipp.modernlogin.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/already_nhave_an_naccount" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/weather_main" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/username"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:text="@={viemodel.email}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/email_error_text"
                    style="@style/modifiedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viemodel.loginFormState.emailError}"
                    android:textColor="@color/red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/username" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/password"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@={viemodel.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/password_error_text"
                    style="@style/modifiedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viemodel.loginFormState.passwordError}"
                    android:textColor="@color/red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cirLoginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    app:cardCornerRadius="@dimen/dimen_18">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="@{viemodel.loginFormState.dataValid?0.9f:0.5f}"
                        android:background="@color/colorAccent"
                        android:enabled="@{viemodel.loginFormState.dataValid}"
                        android:onClick="@{()->viemodel.login()}"
                        android:paddingHorizontal="36dp"
                        android:paddingVertical="@dimen/dimen_12"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/parent"

                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:onClick="@{()->viemodel.signUp()}"
                    android:text="@string/new_user_register_now"
                    android:textAlignment="center"
                    android:textColor="@color/themeColor"
                    android:textSize="17sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>


        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="@{viemodel.loginLoading?View.VISIBLE:View.GONE}" />
    </RelativeLayout>


</layout>