<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viemodel"
            type="com.example.jumpingmind_assignment.feature.registration.ui.registration.RegistrationViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/register_bk_color"
        android:focusableInTouchMode="true"
        android:gravity="center"
        tools:context="com.appsnipp.modernlogin.RegisterActivity">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="@{viemodel.loading?View.VISIBLE:View.GONE}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_marginHorizontal="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/dimen_18">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="86dp"
                            android:layout_height="86dp"
                            android:background="@drawable/baseline_account_circle_24"
                            android:onClick="@{()->viemodel.getImage()}"
                            android:src="@{viemodel.camUri}"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="2dp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@id/profile_image"
                            android:layout_alignBottom="@id/profile_image"
                            android:background="@drawable/backgound_accent_round"
                            android:onClick="@{()->viemodel.getImage()}"
                            android:padding="@dimen/dimen_8"
                            android:src="@drawable/baseline_edit_24" />

                    </RelativeLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/weather_main" />
                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputName"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextName"
                                style="@style/modifiedEditText"
                                android:hint="@string/name"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:text="@={viemodel.username}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/username_error_text"
                            style="@style/modifiedEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viemodel.registrationFormState.userNameError}"
                            android:textColor="@color/red" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextEmail"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_email_hint"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:text="@={viemodel.email}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/email_error_text"
                            style="@style/modifiedEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viemodel.registrationFormState.emailError}"
                            android:textColor="@color/red" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputMobile"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextMobile"
                                style="@style/modifiedEditText"
                                android:hint="@string/bio"
                                android:inputType="text"
                                android:maxLines="1"
                                android:text="@={viemodel.bio}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/bio_error_text"
                            style="@style/modifiedEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viemodel.registrationFormState.bioError}"
                            android:textColor="@color/red"

                            />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:text="@={viemodel.password}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/password_error_text"
                            style="@style/modifiedEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viemodel.registrationFormState.passwordError}"
                            android:textColor="@color/red" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cirLoginButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            app:cardCornerRadius="@dimen/dimen_18">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/colorAccent"
                                android:alpha="@{viemodel.registrationFormState.dataValid?0.9f:0.5f}"

                                android:enabled="@{viemodel.registrationFormState.dataValid}"
                                android:onClick="@{()->viemodel.register()}"
                                android:paddingHorizontal="36dp"
                                android:paddingVertical="@dimen/dimen_12"
                                android:text="@string/action_sign_up"
                                android:textColor="@color/white" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:onClick="@{()->viemodel.gotoLogin()}"
                            android:text="@string/already_have_an_account"
                            android:textAlignment="center"
                            android:textColor="@color/themeColor"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>