<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <include
            android:id="@+id/toolbar_container"
            layout="@layout/toolbar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_ver_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_ver_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.95"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_hor_top"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.15"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choice_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_22"
            app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
            app:layout_constraintStart_toStartOf="@id/gl_ver_start"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_container"
            app:layout_constraintTop_toTopOf="@id/gl_hor_top" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18"
            android:paddingVertical="@dimen/dimen_10"
            app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
            app:layout_constraintStart_toStartOf="@id/gl_ver_start"
            app:layout_constraintTop_toBottomOf="@id/tvMessage">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvCardCat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cat" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cat"
                        android:textSize="@dimen/text_18" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvCardDog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dog" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dog"
                        android:textSize="@dimen/text_18" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>